--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,8 @@ inhibit_all_warnings!
 
 target 'AMKCrashProtector_Example' do
     pod 'AMKCrashProtector/Protector', :path => '../'
-    
+    pod 'AMKCrashProtector/UnrecognizedSelectorProtector', :path => '../'
+
     target 'AMKCrashProtector_Tests' do
         inherit! :search_paths
     end
