--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,7 @@ inhibit_all_warnings!
 target 'AMKCrashProtector_Example' do
     pod 'AMKCrashProtector/Protector', :path => '../'
     pod 'AMKCrashProtector/UnrecognizedSelectorProtector', :path => '../'
+    pod 'AMKCrashProtector/NSKeyValueCodingProtector', :path => '../'
 
     target 'AMKCrashProtector_Tests' do
         inherit! :search_paths
