feat(bugly): 添加 Bugly上报 子组件

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -7,6 +7,7 @@ target 'AMKCrashProtector_Example' do
       'UnrecognizedSelectorProtector',
       'NSKeyValueCodingProtector',
       'MPMoviePlayerViewControllerProtector',
+      'Bugly',
     ]
 
     target 'AMKCrashProtector_Tests' do
